Fix navigation on mobile

--- a/docs/stylesheets/styles.css
+++ b/docs/stylesheets/styles.css
@@ -1,7 +1,3 @@
-.md-nav__title {
-    visibility: hidden;
-}
-
 .md-logo {
   content: url("../assets/images/ohYouDogRound48.png");
 }
